<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="PositionMaterials" Id="{72b2bf5b-2b93-42a9-bc8a-24d8ae335b1f}">
    <Declaration><![CDATA[TYPE PositionMaterials :
STRUCT
	position : INT := 0; //default value is set to predefined constant if bundle needs less than 32 position material pairs
	
	//each position will only store 1 material per face
	top : STRING;
	sides : STRING;
	bottom : STRING;
	upperCorner : STRING;
	lowerCorner : STRING;
	
	wrap : BOOL; //for cardboard and corner guard only
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>